[gd_scene load_steps=3 format=3 uid="uid://ckk0snomqtyae"]

[ext_resource type="Script" path="res://UI/BasePanel/weapon_slot.gd" id="1_3p8h3"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kiqve"]
size = Vector2(50, 50)

[node name="WeaponSlot" type="TextureButton"]
toggle_mode = true
texture_normal = SubResource("PlaceholderTexture2D_kiqve")
script = ExtResource("1_3p8h3")

[node name="WeaponList" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_top = -32.0
offset_right = 176.0
mouse_filter = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
